fix illustrations in sheet deck

--- a/sheets/ML_part3.html
+++ b/sheets/ML_part3.html
@@ -896,7 +896,7 @@ $$
 \end{eqnarray*}`
 $$
 
-&lt;img src = "img/sum_ReLu.png" /&gt;
+&lt;img src = "img/sum_ReLU.png" /&gt;
 
 Many more activation functions: sigmoid, softmax, identity, etc. (see further).
 ]
