--- a/sheets/ML_part3.html
+++ b/sheets/ML_part3.html
@@ -26,7 +26,7 @@ class: center, middle, inverse, title-slide
 <hr align='center' color='#116E8A' size=1px width=97%>
 </html>
 ### Katrien Antonio, Jonas Crevecoeur &amp; Roel Henckaerts
-### <a href="https://github.com/katrienantonio/hands-on-machine-learning-R-module-3">hands-on-machine-learning-R-module-3</a> | November 22 &amp; 24, 2021
+### <a href="https://github.com/katrienantonio/hands-on-machine-learning-R-module-3">hands-on-machine-learning-R-module-3</a> | January 27 and February 3, 2022
 
 ---
 
